[package]
name = "pokemon_tcg_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
ntest = "0.9.3"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features =["derive"] }
serde_json = "1.0.135"
tokio = { version="1.41.1", features=["full"] }
